# Cebuano-Dataset

./: README.md
Dataset/: 01_final.txt  03_codes.txt  04_rawdataset.txt  bracket-converter.ipynb  bracket.ipynb  formatting.ipynb  good.txt  input.txt  input_sentences.txt  raw.txt  refined.txt  sample.txt  sampleclean.txt
Evaluation/: evaluation.ipynb  golden.txt  standard.txt
Parser/: cky-parser.ipynb  parser.ipynb
Parsugbo/: README.md  pyproject.toml
Parsugbo/src/parsugbo/: __main__.py  lexer.py  literals.py  parser.py  tokens.py  visitors.py
